-- Criação do Banco de Dados (Execute esta parte primeiro isoladamente, se precisar)
-- CREATE DATABASE db_springboot_compiladores;

-- 1. Tabela de Arquivos Fonte (A raiz do projeto)
CREATE TABLE IF NOT EXISTS arquivos_fonte (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nome_arquivo VARCHAR(100) NOT NULL,
    codigo_conteudo TEXT NOT NULL,
    data_analise TIMESTAMP NOT NULL
);

-- 2. Tabela de Escopos (Relacionada 1:N com arquivos_fonte)
CREATE TABLE IF NOT EXISTS escopos (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nome_escopo VARCHAR(100) NOT NULL,
    nivel_profundidade INTEGER NOT NULL,
    arquivo_id BIGINT NOT NULL,
    CONSTRAINT fk_arquivo FOREIGN KEY (arquivo_id) 
        REFERENCES arquivos_fonte(id) ON DELETE CASCADE
);

-- 3. Tabela de Símbolos/Variáveis (Relacionada 1:N com escopos)
CREATE TABLE IF NOT EXISTS simbolos (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    lexema VARCHAR(100) NOT NULL,
    tipo_dado VARCHAR(50) NOT NULL,
    linha_declaracao INTEGER NOT NULL,
    escopo_id BIGINT NOT NULL,
    CONSTRAINT fk_escopo FOREIGN KEY (escopo_id) 
        REFERENCES escopos(id) ON DELETE CASCADE
);

-- 4. Tabela de Uso dos Símbolos (Relacionada 1:N com simbolos)
CREATE TABLE IF NOT EXISTS usos_simbolo (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    linha_codigo INTEGER NOT NULL,
    tipo_operacao VARCHAR(50) NOT NULL, -- 'Leitura' ou 'Escrita'
    simbolo_id BIGINT NOT NULL,
    CONSTRAINT fk_simbolo FOREIGN KEY (simbolo_id) 
        REFERENCES simbolos(id) ON DELETE CASCADE
);